# colab-pdf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: test_notebook.ipynb
src/notebook_pdf/: __init__.py  _env.py  magic.py  notebook2pdf.py  notebook_retrieval.py
src/notebook_pdf/notebook_retrieval/: __init__.py  _name.py  local.py
src/notebook_pdf/render/: __init__.py  _config.py  _dependencies.py  _prepare.py  _render.py
