[project]
name = "colab-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.10.0",
    "werkzeug>=3.1.6",
]

[project.scripts]
colab-pdf = "colab_pdf:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
